--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-$def with (session, title)
+$def with (session, title, readme, cmd)
 <html>
   <head>
     <script type = "text/javascript"
@@ -24,19 +24,27 @@ $def with (session, title)
           });
     </script>
   </head>
-  <body>
-    <h1>${title}</h1>
-    <div>
-      Welcome.  You are user ${session.id}.
+  <body style="margin:0;">
+    <div style="margin-left:100px;margin-right:100px;">
+      <h1>${title}<span style="color:#666;margin-left:10pt;">${cmd}</span></h1>
+      <div>
+        Welcome.  You are user ${session.id}.
+        $if readme:
+          See project
+          <a href="/readme">readme</a>.
+      </div>
+      <div id='conversation' style='padding:10px; background:#050505;font-family:monospace;font-size:14px;'>
+      </div>
+      <div style='display:flex;'>
+        <input type='text' id='response' style='flex:1;'/>
+        <button id='submit' style='flex:0;'>Submit</button>
+      </div>
+      <div>
+        <button id='kill'>Restart</button>
+      </div>
     </div>
-    <div id='conversation' style='padding:10px; background:#050505;font-family:monospace;font-size:14px;'>
-    </div>
-    <div style='display:flex;'>
-      <input type='text' id='response' style='flex:1;'/>
-      <button id='submit' style='flex:0;'>Submit</button>
-    </div>
-    <div>
-      <button id='kill'>Restart</button>
+    <div style="background:#AAA;font-size:7pt;padding:6pt;color:#333;margin-top:6pt;">
+      This service exposed with <a href="https://github.com/rspencer01/console2web">console2web</a>.
     </div>
   </body>
 </html>
