--- a/main.html
+++ b/main.html
@@ -1,7 +1,8 @@
 $def with (session, title, readme, cmd)
 <html>
   <head>
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon" />
+    <link rel="shortcut icon" href="/favicon" />
+    <title>${title}</title>
     <script type = "text/javascript"
       src = "/js"></script>
     <script type = "text/javascript" language = "javascript">
